<resources>
    <string name="app_name">To-do-list</string>
    <string name="menu_home">Home</string>
    <string name="menu_list">To-do lists</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_login">login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_ToDo">Send</string>
    <string name="ToDoLists_title">ToDo lists</string>
</resources>