<?xml version="1.0" encoding="utf-8"?>
<!-- @Author Nichlas Daniel Boraso(nibor19)-->
<!-- @Author Laust Christensen(lauch19)-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>